<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Worshiprom</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="loading_text">Loading…</string>
    <string name="action_refresh">Refresh</string>
    <string name="pref_action_show_title">Display ActionBar</string>
    <string name="pref_summary_show_action">if enabled the Top bar will be displayed</string>
    <string name="reload_alert">A restart is required…</string>
    <string name="ok">OK</string>

    <string name="settings">Settings</string>
    <string name="app_info">About this app</string>

    <string name="license">License</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Click in order to support my work :) …</string>
    <string name="source_code">Github</string>
    <string name="source_code_summary">Acces to the source code.</string>
    <string name="version">Worshiprom Version</string>

    <string name="github" translatable="false">https://github.com/holylobster</string>
    <string name="license_type" translatable="false">GNU General Public License 2</string>
    <string name="doante_url" translatable="false">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=6DE8SFMJKRVK2</string>

</resources>
